# go2_isaaclab_deploy

./: README.md  make.sh  real.sh  sim.sh
go2/: CMakeLists.txt  main.cpp
go2/config/: config.yaml
go2/config/unitree_rl_lab/: policy.onnx  policy.yaml
go2/src/: State_RLBase.cpp
include/: param.h
include/FSM/: State_FixStand.h  State_RLBase.h
include/isaaclab/assets/articulation/: articulation.h
include/isaaclab/envs/mdp/actions/: joint_actions.h
include/isaaclab/envs/mdp/observations/: observations.h
include/isaaclab/manager/: manager_term_cfg.h
